test/class/invalid/assigningToMethodCall.wacc
begin
  class Dog is
    int x;
   
    init (int x) is
      self.x = x
    end
    
    int f() is
     return 1
    end
  end

  Dog d = new Dog(1);
  d.f() = 1

end

